--- a/pages/sectors/power/net_metering_analysis.html
+++ b/pages/sectors/power/net_metering_analysis.html
@@ -134,7 +134,7 @@
         <a href="power_deep_dive.html" class="nav-button">← Back to Deep Dive</a>
         <div class="page-title">Deep Dive: Net-Metering Impact Analysis</div>
 
-        <div style="background: linear-gradient(135deg, #FF6B6B 0%, #EE5A5A 100%); border-radius: 16px; padding: 40px; margin-bottom: 30px; color: white;">
+        <div style="background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%); border-radius: 16px; padding: 40px; margin-bottom: 30px; color: white;">
             <h3 style="margin-bottom: 20px; font-size: 1.8em;">⚠️ Critical Finding: Revenue Loss from Net-Metering</h3>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 25px;">
                 <div style="background: rgba(255,255,255,0.2); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px);">
@@ -168,6 +168,17 @@
                         <li><strong>Post-Period (Months 1 to 25):</strong> Payments stabilize at ₨12,000-14,500 - representing only non-solar consumption and grid charges</li>
                         <li><strong>Net Effect:</strong> Grid loses ₨17,000 per net-metered household per month</li>
                     </ul>
+                </div>
+
+                <div style="background: white; padding: 30px; border-radius: 12px; margin-bottom: 25px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
+                    <h4 style="color: #1976D2; margin-bottom: 20px; text-align: center; font-size: 1.2em;">📊 Net-Metering Payment Impact Over Time</h4>
+                    <div style="text-align: center;">
+                        <img src="../../../images/net_metering.png" alt="Net-Metering Payment Impact Analysis" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+                    </div>
+                    <p style="color: #666; font-size: 0.9em; text-align: center; margin-top: 15px; font-style: italic;">
+                        Time series analysis showing the dramatic drop in electricity payments when households install net-metering systems. 
+                        The sharp decline at month 0 represents a 60% reduction in monthly payments from ₨29,000 to approximately ₨12,000.
+                    </p>
                 </div>
 
                 <p><strong>Wider Implications:</strong></p>
