--- a/pages/sectors/tax/fbr_risk_management.html
+++ b/pages/sectors/tax/fbr_risk_management.html
@@ -142,7 +142,7 @@
         <div class="page-title">Deep Dive: FBR Risk Management System Evaluation</div>
 
         <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; margin-bottom: 30px; color: white;">
-            <h3 style="margin-bottom: 20px; font-size: 1.8em;">🚢 IGC Intervention #3: Customs Risk Management Optimization</h3>
+            <h3 style="margin-bottom: 20px; font-size: 1.8em;">🚢 Customs Risk Management Optimization</h3>
             <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px); margin-top: 20px;">
                 <p style="font-size: 1.1em; line-height: 1.8; margin-bottom: 15px;">
                     <strong>Status:</strong> Actively Being Worked On
