--- a/pages/sectors/tax/lahore_tax_potential.html
+++ b/pages/sectors/tax/lahore_tax_potential.html
@@ -141,7 +141,7 @@
         <a href="tax_deep_dive.html" class="nav-button">← Back to Tax Deep Dive</a>
         <div class="page-title">Deep Dive: Lahore Tax Potential Analysis</div>
 
-        <div style="background: linear-gradient(135deg, #FF6B6B 0%, #EE5A5A 100%); border-radius: 16px; padding: 40px; margin-bottom: 30px; color: white;">
+        <div style="background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%); border-radius: 16px; padding: 40px; margin-bottom: 30px; color: white;">
             <h3 style="margin-bottom: 20px; font-size: 1.8em;">🍽️ How Can Better Data Reveal Where Lahore's Tax Potential is Being Lost?</h3>
             <div style="background: rgba(255,255,255,0.15); padding: 25px; border-radius: 12px; backdrop-filter: blur(10px); margin-top: 20px;">
                 <p style="font-size: 1.1em; line-height: 1.8;">
@@ -159,10 +159,21 @@
                         The visualization maps all restaurants in Lahore color-coded by <strong>enforcement town</strong> and registration status:
                     </p>
                     <ul style="margin-left: 25px; color: #333; line-height: 2;">
-                        <li><strong style="color: #D32F2F;">Red dots:</strong> Filed restaurants (registered and paying taxes)</li>
-                        <li><strong style="color: #2E7D32;">Green/other dots:</strong> Registered but non-filing restaurants (evading taxes)</li>
-                        <li><strong style="color: #666;">Black dots:</strong> Unregistered restaurants (completely outside tax system)</li>
+                        <li><strong style="color: #D32F2F;">Red dots:</strong> Un-registered restaurants</li>
+                        <li><strong style="color: #2E7D32;">Green dots:</strong> Registered but non-filing restaurants</li>
+                        <li><strong style="color: #2040d2;">Blue dots:</strong> Registered & filing restaurants</li>
                     </ul>
+                </div>
+
+                <div style="background: white; padding: 30px; border-radius: 12px; margin-bottom: 25px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
+                    <h4 style="color: #1976D2; margin-bottom: 20px; text-align: center; font-size: 1.2em;">📍 Geographic Distribution of Restaurant Tax Compliance in Lahore</h4>
+                    <div style="text-align: center;">
+                        <img src="../../../images/restaurant_tax.png" alt="Lahore Restaurant Tax Compliance Map" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+                    </div>
+                    <p style="color: #666; font-size: 0.9em; text-align: center; margin-top: 15px; font-style: italic;">
+                        Interactive map showing restaurant locations across Lahore colored by enforcement town and tax filing status. 
+                        The dominance of red dots reveals widespread non-compliance across the city.
+                    </p>
                 </div>
 
                 <div style="background: #FFEBEE; padding: 25px; border-radius: 12px; border-left: 5px solid #D32F2F; margin-bottom: 25px;">
