--- a/pages/sectors/power/power_sector.html
+++ b/pages/sectors/power/power_sector.html
@@ -189,10 +189,10 @@
         <div class="page-title">Power Sector - Select View</div>
 
         <div class="reform-nav">
-            <a href="../../dashboards/td_loss_dashboard.html" class="reform-card">
+            <a href="../../dashboards/power_dashboards.html" class="reform-card">
                 <div class="reform-icon">📊</div>
-                <h3>Real Time Dashboard</h3>
-                <p>Interactive live dashboards with maps, charts, and real-time data visualization for T&D losses, recovery rates, and circular debt</p>
+                <h3>Real Time Dashboards</h3>
+                <p>Interactive live dashboards with maps, charts, and real-time data visualization for T&D, Generation, and power sector metrics</p>
             </a>
 
             <a href="power_deep_dive.html" class="reform-card">
