--- a/pages/sectors/tax/tax_sector.html
+++ b/pages/sectors/tax/tax_sector.html
@@ -229,34 +229,15 @@
         <div class="page-title">Tax Reforms</div>
 
         <!-- Key Tax Insights -->
-        <div class="insights-box">
-            <h3>📊 Key Tax Insights</h3>
-            <div class="insights-grid">
-                <div class="insight-card">
-                    <div class="insight-value">₨5.8T</div>
-                    <div class="insight-label">Total FBR Collection FY24-25</div>
-                </div>
-                <div class="insight-card">
-                    <div class="insight-value" style="color: #FFD700;">22.5%</div>
-                    <div class="insight-label">Avg Salaried Tax Rate</div>
-                </div>
-                <div class="insight-card">
-                    <div class="insight-value" style="color: #FF6B6B;">0.65</div>
-                    <div class="insight-label">Income Elasticity (Declining)</div>
-                </div>
-                <div class="insight-card">
-                    <div class="insight-value">48%</div>
-                    <div class="insight-label">Salaried Class Tax Burden</div>
-                </div>
-            </div>
+        
         </div>
 
         <!-- Two Options -->
         <div class="reform-nav">
-            <a href="../../dashboards/tax_dashboard.html" class="reform-card">
+            <a href="../../dashboards/tax_dashboards.html" class="reform-card">
                 <div class="reform-icon">📊</div>
                 <h3>Real Time Dashboard</h3>
-                <p>Interactive dashboards with charts and visualizations for FBR tax collections, income tax trends, salaried class burden, elasticity analysis, and Laffer Curve</p>
+                <p>Interactive dashboards with revenue collection and tax base metrics, performance tracking, and target monitoring</p>
             </a>
 
             <a href="tax_deep_dive.html" class="reform-card">
